update figs 4,5,6 with Els Unsub

--- a/R/figure4to6.Rmd
+++ b/R/figure4to6.Rmd
@@ -33,7 +33,8 @@ big5 <- journal %>%
 els2 <- journal %>% 
   # select(provider, type, pub2008:jr12018) %>% 
   select(provider2, type, pub2008:oa2017, scopus2008:scopus2017) %>% 
-  filter(type == "Journal" & provider2 %in% c("Elsevier Freedom", "Elsevier Subscribed")) %>% 
+  filter(type == "Journal" & provider2 %in% c("Elsevier Freedom", "Elsevier Subscribed",
+                                              "Elsevier Unmatched")) %>% 
   group_by(provider2) %>% 
   summarise_if(is.double, sum, na.rm = TRUE) %>% 
   rename(provider = provider2)
@@ -66,7 +67,7 @@ plot_grid <- function(p1, p2, p3){
 # color palette with 2 reds for Elsevier Free and Sub
 # #E41A1C - red for Elsevier
 pal <- c("#E41A1C", brewer.pal(n = 5, name = "Set1"))
-
+pal <- c(pal[1:2], "#000000", pal[3:6])
 
 ```
 
@@ -149,7 +150,7 @@ Same figure as above with Elsevier broken down by Freedom versus Subscribed.
 p2 <- ggplot(big6ref, aes(x = year, y = cite, group = provider)) +
   geom_line(aes(color = provider, linetype = provider)) +
   scale_color_manual("Provider", values = pal) +
-  scale_linetype_manual("Provider", values = c(2,1,1,1,1,1)) +
+  scale_linetype_manual("Provider", values = c(2,1,1,1,1,1,1)) +
   labs(title = "References by UVA Authors",
        subtitle = "In Big 5 Providers",
        x = "Year", y = "Number of References")
@@ -157,7 +158,7 @@ p2 <- ggplot(big6ref, aes(x = year, y = cite, group = provider)) +
 p3 <- ggplot(big6ref, aes(x = year, y = uvaper, group = provider)) +
   geom_line(aes(color = provider, linetype = provider)) +
   scale_color_manual("Provider", values = pal) +
-  scale_linetype_manual("Provider", values = c(2,1,1,1,1,1)) +
+  scale_linetype_manual("Provider", values = c(2,1,1,1,1,1,1)) +
   labs(title = "Percent of All References by UVA Authors",
        subtitle = "In Big 5 Providers",
        x = "Year", y = "Percent of References")
@@ -200,7 +201,7 @@ plot_fn <- function(data, y, title, ylab, big6 = FALSE){
     } else {
       p <- p + geom_line(aes(color = provider, linetype = provider)) +
         scale_color_manual("Provider", values = pal) +
-        scale_linetype_manual("Provider", values = c(2,1,1,1,1,1))
+        scale_linetype_manual("Provider", values = c(2,1,1,1,1,1,1))
     } 
   p + labs(title = title,
            subtitle = "In Big 5 Providers",
@@ -308,7 +309,7 @@ p2 <- plot_fn(big6oa, y = oa, ylab = "Number of Articles",
 p3 <- plot_fn(big6oa, y = oaper, ylab = "Percent of Articles",
               title = "Percent of OA-Available Articles", 
               big6 = TRUE) +
-  geom_text(aes(x = year, y = oaper, label = oaper), p3_labels2, nudge_x = 0.2)
+  geom_text(aes(x = year, y = oaper, label = oaper), p3_labels2, nudge_x = 0.2, size = 3)
 
 # create big 6 plot
 plot_grid(p1, p2, p3)
