--- a/R/figure1.Rmd
+++ b/R/figure1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "High Use Titles in Big 5 Providers"
+title: "High Use Journals in Big 5 Providers"
 author: "UVA StatLab/RDS"
 output: html_document
 ---
@@ -97,7 +97,6 @@ fig1 <- function(use, provider, title, subtitle){
 ```
 
 
-## High Use Journals
 We began by evaluating the proportion of highly-used titles in 2017 within the Big 5 provider packages: the journals that account for the top X% of use, examined through multiple proxies for “use”, including 
 
 * all article downloads in 2017 (JR1)
@@ -164,13 +163,12 @@ Focusing on the journals UVA researchers have published in over the last 10 year
 
 ## Elsevier Freedom versus Elsevier Subscribed
 
-Same plots as above but with Elsevier broken down by Freedom collection and Subscribed collection. The Freedom Collection is a list of ~1850 active titles (2350 titles in all, including renamed, transferred, discontinued and forthcoming titles) that any institution subscribing to Science Direct Complete gets access to.
+The figures above are repeated below but with Elsevier journals disaggregated into the Freedom collection, Subscribed collection, and journals we were not able to match. Note that the disaggregated Elsevier journals no longer sum to 100% as "high use" is calculated within the package, and then the titles are disaggregated into the collections. The three Elsevier bars collectively account for 100% of the titles.
 
 ```{r derive2}
 # Big 5 with Elsevier broken down by Subscribed and Freedom
-highuse <- highuse_fn(group_var = provider2)
+# highuse <- highuse_fn(group_var = provider2)
 ```
-
 
 ### 1e. High-use Journals by All Article Downloads
 ```{r}
@@ -180,6 +178,7 @@ fig1(use_jr1,
      subtitle = "By All Downloads in 2017 (JR1)")
 ```
 
+With regard to article downloads, the majority of journals in the Subscribed Collection are high-use journals by the JR80 measure (418 of 726 titles). Only 15% of the titles in the Freedom Collection are highly used by the JR80 measure( 166 of 1086 titles). 
 
 ### 1f. High-use Journals by Current Year Article Downloads
 
@@ -191,6 +190,8 @@ fig1(use_jr5,
 
 ```
 
+Focusing on current-year downloads only, 335 journals in the Subscribed Collection are high-use journals by the JR80 metric (46%); 136 journals in the Freedom Collection hit this mark (13%).
+
 ### 1g. High-use Journals by References from UVA Authors
 
 ```{r}
@@ -201,6 +202,8 @@ fig1(use_refs,
 
 ```
 
+Looking at usage based on citations, 306 journals in the Subscribed Collection are high-use by the JR80 metric (42%) compared to 65 journals in the Freedom Collection (6%).
+
 ### 1h. High-use Journals by UVA-Authored Publications
 
 ```{r}
@@ -210,3 +213,4 @@ fig1(use_pubs,
      subtitle = "By UVA Authored Papers")
 ```
 
+Finally, with regard to UVA-authored publicatons, 270 journals in the Subscribed Collection are highly-used by the JR80 metric (37%) while 75 journals in the Freedom Collection are high-use (7%).
